--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
         "symfony/finder": "~2.3",
         "symfony/translation": "~2.3",
         "symfony/yaml": "~2.3",
-        "pimple/pimple": "~1.0"
+        "pimple/pimple": ">=2.1,<4"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "silex/silex": "~1.1"
+        "phpunit/phpunit": "~4.1"
     },
     "autoload": {
         "psr-0": { "Saxulum\\Translation": "src/" }
