--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
     ],
     "require": {
         "php": ">=5.3.3,<8.0",
-        "symfony/config": "~2.3",
-        "symfony/finder": "~2.3",
-        "symfony/translation": "~2.3",
-        "symfony/yaml": "~2.3",
-        "pimple/pimple": "~1.0"
+        "symfony/config": "~2.3|~3.0",
+        "symfony/finder": "~2.3|~3.0",
+        "symfony/translation": "~2.3|~3.0",
+        "symfony/yaml": "~2.3|~3.0",
+        "pimple/pimple": "~1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "silex/silex": "~1.1"
+        "phpunit/phpunit": "~4.0",
+        "silex/silex": "~1.3"
     },
     "autoload": {
-        "psr-0": { "Saxulum\\Translation": "src/" }
+        "psr-4": { "Saxulum\\Translation\\": "src/" }
     }
 }
