--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
     ],
     "require": {
         "php": ">=5.3.3,<8.0",
-        "symfony/config": "~2.3",
-        "symfony/finder": "~2.3",
-        "symfony/translation": "~2.3",
-        "symfony/yaml": "~2.3",
+        "symfony/config": "~2.3|~3.0",
+        "symfony/finder": "~2.3|~3.0",
+        "symfony/translation": "~2.3|~3.0",
+        "symfony/yaml": "~2.3|~3.0",
         "pimple/pimple": ">=2.1,<4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
     },
     "autoload": {
-        "psr-0": { "Saxulum\\Translation": "src/" }
+        "psr-4": { "Saxulum\\Translation\\": "src/" }
     }
 }
